WexGit/Wex_DX/force-app/main/default/objects/WebDAM_Connector__c/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>client id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>