WexGit/Wex_DX/force-app/main/default/objects/WebDAM_Connector__c/fields/Default_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Folder_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Default folder to save assets in</inlineHelpText>
    <label>Default Folder Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>