WexGit/Wex_DX/force-app/main/default/objects/WebDAM_Connector__c/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>