WexGit/Wex_DX/force-app/main/default/objects/WebDAM_Connector__c/fields/search_options__c.field-meta.xml
<CustomField>
    <fullName>search_options__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Params to add to the api call</inlineHelpText>
    <label>search options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>