WexGit/Wex_DX/force-app/main/default/objects/WebDAM_Connector__c/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>