WexGit/Wex_DX/force-app/main/default/objects/WebDAM_Connector__c/fields/WebDAM_Search__c.field-meta.xml
<CustomField>
    <fullName>WebDAM_Search__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WebDAM Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>